my bootstrap page

--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bootstarp #1</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+
 </head>
 <body>
-    <h1>hello github</h1>
+    <div class="text-success container text-center">
+    <h1>hello bootstrap</h1>
     <h2>my first program in github</h2>
+    </div>
 </body>
 </html>
